# Veles

./: Veles.cabal
Source/Veles/: Client.hs  ConnectionInformation.hs  Console.hs  Request.hs  SCGI.hs  Server.hs
